BUG#27939: Early NULLs filtering doesn't work for eq_ref access  - Turn it on for JT_EQ_REF access method